# Next-Gen

./: app.py  pyproject.toml  requirements.txt  utils.py
assets/: custom_styles.css
callbacks/: __init__.py  rotation_callbacks.py
components/: __init__.py  goalscorer.py  match_bracket.py  team_card.py  tournament_goalscorers.py  tournament_matches.py  tournament_tree.py
config/: __init__.py  app_config.py  tournament_config.py
data/: __init__.py  tournament_data.py
data_reader/: NextGenDataReader.py  squad_parser.py
layouts/: __init__.py  main_layout.py
rsconnect-python/: next_gen.json
